test/errors/error39.base
A function with the name 'foo' already exists at line 1, columns 4-7

fun foo() {
    ^^^
